Back up before cleaning the repo.
Former-commit-id: ab0d94fa3c6be29dc76dfe9779e975c675ea08c2 [formerly bbd12c9998bff0d94080a4ca3a51acbc6bb66f68]
Former-commit-id: 2c5a78fffcf82c9fabfc88b9b2a5f3c5e02feb1d

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,7 +45,7 @@ add_compile_definitions(PUBLIC VPP_CLI)
 
 set(COMMON_SRCS
     "src/seq_align_multiple.cpp"
-    "src/align/align.cpp"
+    "src/align.cpp"
     "src/pe.cpp"
     "src/traceback.cpp"
     "src/utils.cpp"
