Co Simulation Automation Pipeline is finished and tested on Local Affine kernel. Also, fixed a minor issue in frontend header.
Former-commit-id: c3eaaa2fa9493bb639d4bdce0faeac6757cec67b [formerly ddc0a96cc4ca70274912d1274fbd5abf46ea859d] [formerly 71f43fdb1958786e80e86c06e8eba0440ca1d4aa [formerly 14b69126ab310360b006cc3c0873ecb1d79f00f0]]
Former-commit-id: 71f43fdb1958786e80e86c06e8eba0440ca1d4aa
Former-commit-id: 63683a71590a423a125fdfec94d29640a119d46d

--- a/templates/cosim.tcl.template
+++ b/templates/cosim.tcl.template
@@ -8,7 +8,10 @@ set_top seq_align_multiple_static
 
 open_solution "solution1" -flow_target vitis
 set_part {xcvu9p-flgb2104-2-i}
-create_clock -period {{ clock_frequency }}Hz -name default
+create_clock -period {{ clock_frequency }}ns -name default
 config_interface -m_axi_alignment_byte_size 64 -m_axi_latency 64 -m_axi_max_widen_bitwidth 512
 config_rtl -register_reset_num 3
-cosim_design -enable_dataflow_profiling -trace_level all -v
+csim_design
+csynth_design -dump_cfg -dump_post_cfg 
+cosim_design -enable_dataflow_profiling -trace_level all
+exit
