Switched the dimension of the input query and references to achieves constant length maxi data movement. Also updated the linear kernel with the latest update in the template.
Former-commit-id: e747e06ba96ed57c8a0d4e133ec4b562b9b6c844 [formerly a2c4c4ad6ef9d1ab07ad71e441626e5ff313c858]
Former-commit-id: de67a1bfe4ca9ffa9e22bdfd82204b8acfd012e1

--- a/templates/cosim.tcl.template
+++ b/templates/cosim.tcl.template
@@ -10,7 +10,7 @@ open_solution "solution1" -flow_target vitis
 set_part {xcvu9p-flgb2104-2-i}
 create_clock -period {{ clock_frequency }}ns -name default
 config_dataflow -strict_mode warning
-config_interface -m_axi_alignment_byte_size 64 -m_axi_latency 64 -m_axi_max_widen_bitwidth 512 -m_axi_max_read_burst_length 32
+config_interface -m_axi_alignment_byte_size 64 -m_axi_latency 64 -m_axi_max_widen_bitwidth 512
 config_rtl -register_reset_num 3
 config_export -deadlock_detection none
 config_interface -m_axi_conservative_mode=1
