Updated global and loca testbench file for benchmarking.
Former-commit-id: d04e87b6fc6cedbde5bd7c0269a9fa4493e3d714 [formerly 0371b813b0d26f663a6d39649b1ae7829d74c1d5]
Former-commit-id: c5433ee431f984d35545a0cddaabad76d06ac6e7

--- a/.gitignore
+++ b/.gitignore
@@ -79,7 +79,8 @@ banding_global_linear_out.txt
 /.idea/
 compile_configs
 
-/reports/
+/reports_compile/
+/reports_cosim/
 
 /tmp/
 /vitis_projects/
