Updated host utils for printing semiglobal alignment. Debugged the semiglobal short long alignment (The solution doesn't have correct logic to start the traceback at the last row) and it's ready to be compiled.
Former-commit-id: 97f18b34e228a526158db0d23494f11926e3f3ff
Former-commit-id: 708283bb0bfdb027aae7a197513eeb88b240fbb8

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,6 +38,8 @@ set(EXECUTABLE_TARGETS
     test_csim_overlap_linear_suffix_prefix
     test_csim_local_two_piece_affine
     test_csim_global_two_piece_affine
+
+    test_global_affine_real_data
 )
 
 add_compile_definitions(PUBLIC CMAKEDEBUG)
@@ -142,6 +144,13 @@ add_executable(test_csim_local_two_piece_affine
     ${COMMON_SRCS}) 
 
 
+add_executable(test_global_affine_real_data
+    "testbench/test_csim_global_affine_real_data.cpp"
+    "kernels/global_affine/kernel_global_affine.cpp"
+    ${COMMON_SRCS}
+)
+
+
 # Test Python APIs
 #add_executable(test_pyapi "testbench/test_align.cpp"
 #    "include/seq_align_multiple.h"
@@ -174,6 +183,7 @@ target_include_directories(test_csim_semi_global_linear_short_long PRIVATE "${DP
 target_include_directories(test_csim_local_two_piece_affine PRIVATE "${DP_HLS_HOME}/kernels/local_two_piece_affine")
 target_include_directories(test_csim_global_two_piece_affine PRIVATE "${DP_HLS_HOME}/kernels/global_two_piece_affine")
 
+target_include_directories(test_global_affine_real_data PRIVATE "${DP_HLS_HOME}/kernels/global_affine")
 
 # Add include to Xilinx Library Files
 if (RAPTOR)
