--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -22,6 +22,11 @@ theme:
     - navigation.tabs
     - navigation.sections
     - navigation.path
+    - navigation.tabs.sticky
+    - navigation.instant.prefetch
+    - navigation.tracking
+    - navigation.footer
+    - navigation.expand
     - toc.integrate
     - navigation.top
     - search.suggest
@@ -29,24 +34,37 @@ theme:
     - content.tabs.link
     - content.code.annotation
     - content.code.copy
+    - content.action.edit
+    - content.action.view
+    - content.tooltips
     - toc.follow
   language: en
   palette:
     - scheme: default
       toggle:
-        icon: material/toggle-switch-off-outline 
+        icon: material/brightness-7
         name: Switch to dark mode
       primary: custom
       accent: white
     - scheme: slate
       toggle:
-        icon: material/toggle-switch
+        icon: material/brightness-4
         name: Switch to light mode    
-      primary: custom
+      primary: white
       accent: white
     
   logo: 'images/dp_hls_logo.png'
   favicon: 'images/dp_hls_logo.png'
+  admonition:
+    note: octicons/tag-16
+    info: octicons/info-16
+    tip: octicons/squirrel-16
+    success: octicons/check-16
+    question: octicons/question-16
+    warning: octicons/alert-16
+    bug: octicons/bug-16
+    example: octicons/beaker-16
+    quote: octicons/quote-16
 
 plugins:
   - search
@@ -75,6 +93,10 @@ markdown_extensions:
   - pymdownx.superfences
   - pymdownx.mark
   - attr_list
+
+use_directory_urls: false
+nav:
+  - Home: index.md
 
 repo_url: https://github.com/TurakhiaLab/DP-HLS
 
