add gpu baseline
Former-commit-id: 8d142c91cf92100cfa5a7aab9c4fee6792408324

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "darwin"]
 	path = darwin
 	url = https://github.com/yatisht/darwin
+[submodule "baseline/software/baseline/software/GASAL2"]
+	path = baseline/software/baseline/software/GASAL2
+	url = https://github.com/nahmedraja/GASAL2.git
