updated git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,7 @@ data/uniprot_sprot.fasta
 /..bfg-report/
 /docs/.cache/
 /results/
+baseline/software/source/references.fasta
+baseline/software/source/queries.fasta
+baseline/software/source/processed_references.fasta
+baseline/software/source/processed_queries.fasta
