Changed th eprotein sw to no traceback version, updated git submodules list (.gitmodules)
Former-commit-id: 8db27bd09a1a4eec7b3dfa4e06cadc02dc7b4808

--- a/.gitignore
+++ b/.gitignore
@@ -106,3 +106,6 @@ baseline/software/source/references.fasta
 baseline/software/source/queries.fasta
 baseline/software/source/processed_references.fasta
 baseline/software/source/processed_queries.fasta
+/data/
+compile_results
+vitis_projects
