--- a/.gitmodules
+++ b/.gitmodules
@@ -8,5 +8,11 @@
 	path = baseline/hardware/darwin
 	url = https://github.com/yatisht/darwin
 [submodule "baseline/software/baseline/software/GASAL2"]
-	path = baseline/software/baseline/software/GASAL2
-	url = https://github.com/nahmedraja/GASAL2.git
+	path = baseline/software/GASAL2
+	url = https://github.com/Yufeng98/GASAL2.git
+[submodule "baseline/software/minimap2"]
+	path = baseline/software/minimap2
+	url = https://github.com/lh3/minimap2.git
+[submodule "baseline/software/seqan3"]
+	path = baseline/software/seqan3
+	url = https://github.com/seqan/seqan3.git
